# tsmedia-vengo

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRACT.md  README.md  aws-iot-cert-provisioner.sh  first-boot.sh  gpu-monitor.sh  gpu-stability-config-dsi.patch  gpu-stability-config.sh  install-video-stability.sh  main.py  pigpio-setup.sh  pyproject.toml  run_production.py  setup-dependencies.sh  setup-pi-config.sh  setup-pigpiod-timeout.sh  setup-security.sh  setup-services.sh  setup-signage.sh  setup-sim7600.sh  setup-wifi-provisioning.sh  setup_autostart.sh  sleep.service  test_wifi_fixes.py  test_wifi_status.py  tsv6-boot-config-guard@.service  tsv6-connection-indicator.service  tsv6-first-boot.service  tsv6-obstruction-handler.service  tsv6-pi-setup.sh  tsv6-pi5-setup.sh  tsv6-signage.service  tsv6-wifi-provisioning.service  tsv6-xorg@.service  tsv6.service  video-watchdog.service  video-watchdog.sh
.factory/: settings.json
.github/workflows/: version-release.yml
.missions/20260429-product-display-page-scan-result-ac180514/: log.jsonl
assets/certs/: .gitkeep
config/boot/: config.txt.golden
config/logrotate/: tsv6
docs/: DEVICE_AGENT.md  LAMBDA_NFC_URL_UPDATE.md  NFC_QR_REPLICATION_GUIDE.md  V2_BRAND_PLAYLISTS.md  WAVESHARE_PCIE_WIFI_SETUP.md  boot-config-safety.md  enterprise-wifi-fix.md
lambdas/barcode_repo_lookup_v2/: deploy.sh  lambda_function.py
lambdas/updated_barcode_to_go_upc_v2/: deploy.sh  lambda_function.py
scripts/: barcode_scanner.py  boot-config-guard.sh  check_network.sh  code_handler.py  create_memory_fix_issues.sh  diagnose-display.sh  display_driver_service.py  enable-hdmi-output.sh  fix_git_config.sh  install-boot-config.sh  product_lookup_cli.py  scanner.py  servo_calibrate.py  servo_zero.py  switch-network-adapter.sh  v2_smoke_test.py  wifi-wait.sh
scripts/system_monitoring/: memory_monitor.py  memory_utils.py  service_resource_monitor.py  swap_optimizer.sh
scripts/systemd/: tsv6-recovery-hard.service  tsv6-recovery-intermediate.service  tsv6-recovery-soft.service
scripts/udev/: 77-tsv6-sim7600-ignore.rules  78-tsv6-sim7600-symlinks.rules  99-tsv6-barcode.rules
scripts/wifi_manager/: __init__.py  example.py  wifi_manager.py
tests/: __init__.py  conftest.py  test_sleep_display_visual.py  test_status_deduplication.py
tests/hardware/: __init__.py
tests/integration/: __init__.py  fake_pisignage_server.py  test_full_recycle_flow.py  test_full_system.py  test_tsv6_native_e2e.py
tests/test_ads/: __init__.py  conftest.py  test_cache.py  test_client.py  test_reporter.py  test_scheduler.py
tests/unit/: __init__.py  conftest.py  test_asset_sync.py  test_aws_manager.py  test_bin_level_monitor.py  test_boot_config_safety.py  (+28 more)
(+124 files in other folders)
