[project]
name = "tsv6"
version = "6.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-blinka>=8.66.0",
    "adafruit-circuitpython-pca9685>=3.4.19",
    "awscrt>=0.27.4",
    "awsiotsdk>=1.24.0",
    "dbus-python>=1.3.2",  # Required for systemd D-Bus recovery (network monitor)
    "gpiozero>=2.0.1",
    "pyserial>=3.5",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pygame>=2.6.1",
    "python-dotenv>=1.1.1",
    "python-vlc>=3.0.21203",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "rpi-gpio>=0.7.1; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/tsv6 --cov-report=term-missing"
