[project]
name = "tsv6"
version = "6.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "awscrt>=0.27.4",
    "awsiotsdk>=1.24.0",
    "dbus-python>=1.3.2; sys_platform == 'linux'",  # Required for systemd D-Bus recovery (network monitor)
    "flask>=3.0.0",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pygame>=2.6.1",
    "pyserial>=3.5",
    "python-dotenv>=1.1.1",
    "python-vlc>=3.0.21203",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "python-socketio[client]>=4.6.1,<5.0",
    "python-engineio>=3.14.2,<4.0",
    "websocket-client>=1.3",
    "rpi-gpio>=0.7.1; sys_platform == 'linux'",  # Reserved for future sensor updates
    "lgpio>=0.2.2.0; sys_platform == 'linux'",  # GPIO access for Blinka on Pi 5 (BCM2712)
    "adafruit-blinka>=8.0.0; sys_platform == 'linux'",  # Hardware abstraction for Raspberry Pi (board, busio)
    "adafruit-circuitpython-pca9685>=3.4.0; sys_platform == 'linux'",  # PCA9685 PWM servo controller
    "adafruit-circuitpython-vl53l0x>=1.2.0; sys_platform == 'linux'",  # VL53L0X ToF distance sensor (bin level)
    "adafruit-circuitpython-vl53l1x>=1.1.0; sys_platform == 'linux'",  # VL53L1X ToF distance sensor (recycling verification)
    "adafruit-extended-bus>=1.0.0; sys_platform == 'linux'",  # Extended I2C bus selection (non-default buses)
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
# For coverage report: uv run pytest --cov=src/tsv6 --cov-report=term-missing
